--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	<script type="module" src="js/main.js" type="text/javascript"></script>
 -->
 	<script type="module" src="dist/bundle.js"></script>
-
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.2/FileSaver.min.js"></script>
 
 
 
