--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 -->
 	<script type="module" src="dist/bundle.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.2/FileSaver.min.js"></script>
-
+	<!-- <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest"> </script> -->
 
 
 	<style data="dynSliderStyle" type="text/css"></style>
